--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,10 +7,8 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"),
                       "https://rubyonrails.org/" %>
-<%= link_to image_tag("lagotto.jpg", alt: "Lagotto", width: "600"),
-                      "https://www.akc.org/expert-advice/lifestyle/fun-facts-lagotto-romagnolo/" %>
